--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -30,15 +30,15 @@
     background: var(--main-color);
     color:#fff;
 }
-*::webkit-scrollbar{
+*::-webkit-scrollbar{
     height: .5rem;
-    white-space: .7rem;
+    width: .7rem;
     border-radius: 20px;
 }
-*::webkit-scrollbar-track{
+*::-webkit-scrollbar-track{
     background-color: transparent;
 }
-*::webkit-scrollbar-thumb{
+*::-webkit-scrollbar-thumb{
     background-color: var(--color-primary);
 }
 html{
@@ -229,6 +229,7 @@ section{
     margin-bottom: 2rem;
     text-transform: capitalize;
 } 
+
 /* ---- Sidebar ---- */
 .side-bar{
     position: fixed ;
@@ -259,12 +260,14 @@ section{
     margin-bottom: .5rem;
     padding: .5rem;
     background-color: var(--color-secondary);
+    margin-left: 7rem;
 }
 .side-bar .profile h3{
     font-size: 2rem;
     color: var(--black);
     text-transform: capitalize;
     margin-bottom: 2rem;
+    /* margin-left: 7rem; */
 }
 .side-bar .profile p{
     color: var(--light-color);
@@ -303,9 +306,9 @@ section{
 
 }
 /*------Form Container-----*/
-.reg-body{
+/* .reg-body{
     background-color: var(--color-primary);
-}
+} */
 .form-container{
     display: flex;
     align-items: center;
@@ -322,22 +325,26 @@ section{
     z-index: -3;
 
 } */
-  .logo{
+.logo{
          margin-left: 600px;
         /* margin-top: 20px; */ 
         /* margin: auto; */
         height: 150px;
  } 
+ .reg-logo{
+    margin-left: 480px;
+    width: 200px;
+ }
 .form-container form{
     box-shadow: var(--box-shadow);
     border-radius: .5rem;
     padding: 2rem;
     background-color:rgba(255,255,255,0.3);
     height:500px;
-
 }
 .form-container .login{
     width: 50rem;
+    height: 400px;
 }
 .form-container .register{
     width: 80rem;
@@ -346,16 +353,16 @@ section{
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 1rem;
-    /* color: var(--color-primary); */
-    color: var(--white);
+    color: var(--color-primary);
+    /* color: var(--white); */
     text-transform: capitalize;
     font-weight: bold;
 }
 .form-container form p{
     padding-top: 1rem;
     font-size: 1.7rem;
-    /* color: var(--black); */
-    color: var(--white);
+    color: var(--black);
+    /* color: var(--white); */
 }
 .form-container form p span{
     color: var(--red);
